<resources>
    <string name="app_name" translatable="false">Sky Cypher</string>
    <string name="appwidget_text">Esempio</string>
    <string name="save_configuration">Salva</string>
    <string name="app_widget_description">Memorizza in modo sicuro le tue credenziali nella schermata iniziale. Puoi sbloccarli e bloccarli quando necessario.</string>
    <string name="emptywidget_text">Nessuna credenziale aggiunta</string>
    <string name="status_widget_description">Keep an eye on the passwords to change.</string>
    <string name="unlock_the_password_first">Unlock the password first.</string>
    <string name="password_copied_to_clipboard">Password copied to clipboard.</string>
    <string name="my_passwords">Le mie password</string>
    <string name="stored_credentials">Password conservate: %1$d</string>

    <string name="credentials_fragment">Ciao credentials fragment</string>
    <string name="addcredentials_fragment">Ciao add credentials fragment</string>
    <string name="add">AGGIUNGI</string>
    <string name="credentials">Credenziali</string>
    <string name="add_credential">Aggiungi credenziali</string>
    <string name="clear">Pulisci</string>
    <string name="insert_the_password">Inserisci la password</string>
    <string name="password" translatable="false">Password</string>
    <string name="master_password" translatable="false">Master Password</string>
    <string name="insert_the_service">Inserisci il servizio</string>
    <string name="service">Servizio</string>
    <string name="insert_your_username">Inserisci l\'username</string>
    <string name="username" translatable="false">Username</string>
    <string name="insert_a_new_credential">Inserisci una nuova credenziale</string>
    <string name="credential_added_toast">Credenziali aggiunte correttamente ;)</string>
    <string name="credential_modified_toast">Credenziali modificate correttamente ;)</string>
    <string name="credential_deleted_toast">Credenziali eliminate correttamente ;)</string>
    <string name="unlock_toast">Sblocco riuscito</string>
    <string name="invalid_credential_toast">Credenziali non valide. Uno o più campi vuoti</string>
    <string name="unlock">SBLOCCA</string>
    <string name="do_something">Fai qualcosa</string>
    <string name="copy_the_credential_s_password">Copia la password.</string>
    <string name="modify_the_credential">Modifica</string>
    <string name="delete_the_credential">Cancella</string>
    <string name="unlock_lock_the_credential_s_password">Blocca/sblocca la password</string>
    <string name="add_a_new_credential">Aggiungi nuova credenziale</string>
    <string name="locked_password" translatable="false">*******</string>
    <string name="wrong_master_password">Master password errata</string>
    <string name="authentication">Autenticazione</string>
    <string name="password_deleted">Password eliminata</string>

    // Widget
    <string name="unlock_widget">Sblocca widget</string>
    <string name="insert_the_master_password_to_unlock_your_password">Inserisci la master password per sbloccare questa password</string>
    <string name="insert_your_master_password">Inserisci la tua master password</string>
    <string name="lock">BLOCCA</string>
    <string name="widget_configuration">Configurazione widget</string>
    <string name="credential_unlocked_successfully">Credenziali sbloccate correttamente</string>
    <string name = "select_at_least">Seleziona almeno una credenziale</string>

    //Settings
    <string name="choice">Scegli l\'ordine:</string>
    <string name="order1">Ordine alfabetico per servizio</string>
    <string name="order2">Ordine alfabetico per username</string>
    <string name="order3">Ordine cronologico</string>
    <string name="enable_dark_mode">Cambia il tema</string>
    <string name="tv_change_masterpassword">Cambia la master password:</string>
    <string name="old_pw">Inserisci la vecchia master password</string>
    <string name="new_pw">Inserisci la nuova master password</string>
    <string name="confirm_new_pw">Conferma la nuova master password</string>
    <string name="order_display">Ordine di visualizzazione</string>
    <string name="theme_language">Tema</string>
    <string name="reset_mp" translatable="false">Reset master password</string>
    <string-array name="languages">
        <item>Italiano</item>
        <item>English</item>
    </string-array>

    // Stats
    <string name="stats">Statistiche</string>
    <string name="pw_to_modify">Password da modificare</string>
    <string name="show">Mostra</string>
    <string name="categories">Categorie</string>
    <string name="stat3">Stat da inventare</string>
    <string name="last_modify_date">Data di ultima modifica</string>

    // Modify
    <string name="modify_your_username">Modifica username</string>
    <string name="modify_the_service">Modifica servizio</string>
    <string name="modify_the_password">Modifica password</string>

    // Welcome
    <string name="how_to_create_strong_password">Come creare una password<i>forte</i>? Vedi <a href="https://support.google.com/accounts/answer/32040?hl=en">Consigli di Google</a></string>
    <string name="welcome_this_app">Benvenuto! Questa app ti consente di memorizzare in modo sicuro le tue password</string>
    <string name="choose">Scegli una master password <i>forte</i> per accedere a tutte le password salvate</string>
    <string name="reinsert_your_master_password">Inserisci nuovamente la Master Password</string>
    <string name="confirm">Conferma</string>
    <string name="password_mismatch">Password non corrispondenti</string>
    <string name="entered_passwords_do_not_match">Le password inserite non corrispondono</string>
    <string name="master_password_correctly_inserted">Master Password inserita correttamente</string>
    <string name="blank_password">Password vuota</string>
    <string name="passwords_cannot_be_blank">Le password non possono essere vuote</string>
    <string name="insert_the_master_password">Inserisci la Master Password</string>
    <string name="see_all">Vedi tutto</string>
    <string name="hello_blank_fragment">Ciao blank fragment</string>
    <string name="settings">Impostazioni</string>
    <string name="number_of_passwords_stored">Numero di password salvate: %1$s</string>
    <string name="number_of_old_passwords">Numero di vecchie password salvate: %1$s</string>
    <string name="password_status">Stato della password</string>
    <string name="it_is_advisable_to_change_your_passwords_at_least_every_3_6_months">E\' consigliato cambiare le tue password almeno ogni 3/6 mesi</string>
    <string name="equal_passwords">Password uguali</string>
    <string name="you_should_not_use_the_same_password_for_different">You should not use the same password for different services</string>
    <string name="value">Valore</string>
    <string name="add_widget">Aggiunta widget</string>
    <string name="last_modified">Ultima modifica</string>

    // Widget Previews
    <string name="education_portals">Education portals</string>
    <string name="alice_smith">alice.smith</string>
    <string name="cool_school">Cool School</string>
    <string name="alice_smith_underscore">alice_smith</string>
    <string name="stem_everywhere">STEM everywhere</string>
    <string name="your_credentials_status">Your credentials status:</string>
    <string name="fake_date_2023_02_21">2023&#8211;02&#8211;21</string>
    <string name="important_bank_account_fake">Important bank account</string>
    <string name="alice_and_bob_fake">Alice and Bob</string>
    <string name="fake_date_2022_10_11">2022&#8211;10&#8211;11</string>
</resources>