<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--
        The warning UselessParent is a false positive as
        this structure allows a wider dialog.
    -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        tools:ignore="UselessParent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/username_te"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_your_username"
            android:minHeight="48dp"
            android:autofillHints="username"
            android:inputType="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service" />

        <EditText
            android:id="@+id/service_te"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_the_service"
            android:minHeight="48dp"
            android:autofillHints=""
            android:inputType="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_te"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_the_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:autofillHints="" />

        <Button
            android:text="@string/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</FrameLayout>