<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddCredentialActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_a_new_credential_to_cypher_it_will_be_in_good_hands"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/username_te"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_your_username"
            android:minHeight="48dp"
            android:autofillHints="username"
            android:inputType=""
            tools:ignore="VisualLintTextFieldSize" />
        <!-- False positive as it has to match the screen -->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service" />

        <EditText
            android:id="@+id/service_te"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_the_service"
            android:minHeight="48dp"
            android:autofillHints=""
            android:inputType=""
            tools:ignore="VisualLintTextFieldSize" />
        <!-- False positive as it has to match the screen -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_te"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_the_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize"
            />
        <!-- False positive as it has to match the screen -->


        <View
            android:id="@+id/row"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginVertical="13dp"
            android:background="@android:color/darker_gray"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/master_password" />

        <EditText
            android:id="@+id/inserted_master_password_te"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_your_master_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize"
            />
        <!-- False positive as it has to match the screen -->


        <Button
            android:layout_gravity="center"
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

    </LinearLayout>


    </LinearLayout>