<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.PasswordManager.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PasswordManager.AppWidgetContainer"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/unlock_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_900"
        android:textColor="@color/white"
        android:text="@string/unlock"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_900"
        android:textColor="@color/white"
        android:text="@string/add"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_900"
        android:textColor="@color/white"
        android:text="@string/do_something" />

    <ListView
        android:id="@+id/widget_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center" />

    <TextView
        android:id="@+id/empty_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:text="@string/emptywidget_text"/>

</LinearLayout>
