<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:id="@+id/tv_choice"
        android:layout_width="116dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/choice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="72dp"
            android:checked="true"
            android:text="@string/order3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="72dp"
            android:text="@string/order2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="72dp"
            android:text="@string/order1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

    </RadioGroup>

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.055" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchDarkMode"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:text="@string/enable_dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/tv_change_language"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="8dp"
        android:text="@string/change_language"
        app:layout_constraintBottom_toBottomOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="151dp"
        android:layout_height="49dp"
        android:entries="@array/languages"
        app:layout_constraintBottom_toBottomOf="@id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="@id/tv_change_language"
        app:layout_constraintTop_toBottomOf="@+id/switchDarkMode"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchDarkMode"
        app:layout_constraintVertical_bias="0.169" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="118dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="128dp"
        android:text="@string/tv_change_masterpassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/oldPw"
        android:layout_width="252dp"
        android:layout_height="59dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="220dp"
        android:autofillHints="password"
        android:hint="@string/old_pw"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/newPw"
        android:layout_width="252dp"
        android:layout_height="59dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="144dp"
        android:autofillHints="password"
        android:hint="@string/new_pw"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPw"
        app:layout_constraintVertical_bias="0.647" />

    <EditText
        android:id="@+id/confirmNewPw"
        android:layout_width="252dp"
        android:layout_height="59dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="76dp"
        android:autofillHints="password"
        android:hint="@string/confirm_new_pw"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPw"
        app:layout_constraintVertical_bias="0.701" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmNewPw" />

    <TextView
        android:id="@+id/tv_order_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/order_display"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_theme_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/theme_language"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tv_reset_mp"
        android:layout_width="117dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/reset_mp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>