<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.PasswordManager.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PasswordManager.AppWidgetContainer"
    android:orientation="vertical">

    <TextView
        android:id="@+id/widget_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/education_portals"
        android:background="@drawable/widget_name_background"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="8dp"
        />

    <LinearLayout android:id="@+id/widget_listview_item_fake_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/credentials_listview_item_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:layout_marginVertical="2dp">

        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alice_smith"
            android:textSize="13sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cool_school"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout android:id="@+id/widget_listview_item_fake_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/credentials_listview_item_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:layout_marginVertical="2dp">

        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alice_smith_underscore"
            android:textSize="13sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stem_everywhere"
            android:textSize="13sp" />
    </LinearLayout>




</LinearLayout>