<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.PasswordManager.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PasswordManager.AppWidgetContainer"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_credentials_status"
        android:layout_marginBottom="5dp"
        android:textColor="?android:attr/textColorPrimary"
        />

    <LinearLayout
        android:background="@drawable/stats_widget_listview_item_background"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="1dp"
        android:baselineAligned="false">


        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/alice_smith" />
            <TextView
                android:text="@string/cool_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="Username" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingStart="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/last_modified"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fake_date_2022_10_11"
                android:textColor="@color/red"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
            <!-- Suppresses false positive as the text is readable -->

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/stats_widget_listview_item_background"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="1dp"
        android:baselineAligned="false">


        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/alice_and_bob_fake" />
            <TextView
                android:text="@string/important_bank_account_fake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="Username" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingStart="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/last_modified"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fake_date_2023_02_21"
                android:textColor="@color/orange"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
            <!-- Suppresses false positive as the text is readable -->

        </LinearLayout>

    </LinearLayout>


</LinearLayout>